k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: app
spec:
  selector:
    app: myapp
  ports:
    - name: http
      port: 80
      targetPort: 80
